--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "router": "^1.3.7",
     "web-vitals": "^2.1.4"
   },
